Turn on inclusion of polyfills in destination file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "types": ["lua-types/jit"]
     },
     "tstl": {
-        "luaTarget": "JIT"
+        "luaTarget": "JIT",
+        "luaLibImport": "inline"
     }
 }
